[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quarto-data-analysis-template"
version = "0.1.0"
description = "Simple template for data analysis with Quarto and Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.1.1",
    "itables>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]



[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]
